tests/ui/imports/import-after-macro-expand-2.stderr
error[E0659]: `Thing` is ambiguous
  --> $DIR/import-after-macro-expand-2.rs:14:27
   |
LL |         let thing: crate::Thing = Thing::Foo;
   |                           ^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `Thing` could refer to the enum defined here
  --> $DIR/import-after-macro-expand-2.rs:6:1
   |
LL | / pub enum Thing {
LL | |     Foo
LL | | }
   | |_^
   = help: use `crate::Thing` to refer to this enum unambiguously
note: `Thing` could also refer to the enum imported here
  --> $DIR/import-after-macro-expand-2.rs:3:5
   |
LL | use thing::*;
   |     ^^^^^^^^
   = help: use `crate::Thing` to refer to this enum unambiguously

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
